--- a/atten/templates/subjects/subjects.html
+++ b/atten/templates/subjects/subjects.html
@@ -14,7 +14,7 @@
                 <i id="left-xmark" class="fa-solid fa-xmark d-none"></i>
                 <div class="col-lg-12 my-3">
                     <a href="#">
-                        <button id="add-btn">Add Student</button>
+                        <button id="add-btn">Add Subjects</button>
                     </a>
                 </div>
 
