--- a/atten/templates/departments/departments.html
+++ b/atten/templates/departments/departments.html
@@ -9,35 +9,44 @@
 
     <!-- Add section -->
 
-    <section style="margin-top: 80px;" class="container p-3">
-        <div class="col-lg-12 text-start my-3">
-            <a href="#">
-                <button id="add-btn">Add Department</button>
-            </a>
-        </div>
-    </section>
+    
+    {% if request.user.is_authenticated and request.user.is_superuser %}
+        <section style="margin-top: 80px;" class="container p-3">
+            <div class="col-lg-12 text-start my-3">
+                <a href="#">
+                    <button id="add-btn">Add Department</button>
+                </a>
+            </div>
+        </section>
 
+    {% else %}
+
+    <section style="margin-top: 80px;"></section>
+
+    {% endif %}
 
 
     <section id="add-section" class="border rounded shadow">
         <h2 class="text-center my-2">Enter Department Info.</h2>
-        <form class="py-3" action="#">
+        <form class="py-3" action="{% url 'create_dep' %}" method="post">
+
+            {% csrf_token %}
             <!-- input form -->
             <div class="col-md-6 row mx-auto my-3">
 
                 <div class="col-lg-12 my-2">
                     <label for="department_name" class="form-label">Name Of Department</label>
-                    <input type="text" class="form-control" name="department_name" id="department_name">
+                    <input type="text" class="form-control" name="department_name" required id="department_name">
                 </div>
 
                 <div class="col-lg-6  my-2">
                     <label for="short_name" class="form-label">Short Name of Department</label>
-                    <input type="text" class="form-control" name="short_name" id="short_name">
+                    <input type="text" class="form-control" name="short_name" required id="short_name">
                 </div>
 
                 <div class="col-lg-6  my-2">
                     <label for="department_code" class="form-label">Code of Department</label>
-                    <input type="text" class="form-control" name="department_code" id="department_code">
+                    <input type="text" class="form-control" name="department_code" required id="department_code">
                 </div>
 
             </div>
@@ -55,132 +64,48 @@
 
     <!-- Start of Departmets -->
 
+    {% include "base/messages.html" %}
 
 
-    <section class="departments container mx-auto d-flex flex-wrap justify-content-center my-3">
+    <section style="min-height: 100vh;" class="departments container mx-auto d-flex flex-wrap justify-content-start my-3">
+        {% for department in departments %}
         <div class="col-lg-4 p-3">
             <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
-                <form action="#" method="POST">
+                <form action="{% url 'update_department_image' %}" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    
                     <div class="col-lg-12 d-flex flex-column justify-content-center department_img">
+                        {% if department.image %}
+                        <img class="preview mx-auto rounded" src="/media/{{ department.image }}" alt="">
+                        {% else %}
                         <img class="preview mx-auto rounded" src="../static/img/clg-img.jpg" alt="">
+                        {% endif %}
+                        
+                        {% if request.user.is_authenticated %}
                         <div class="row mx-auto">
                             <section class="col-lg-8 p-2">
-                                <input type="file" class="fileInput" id="upladImg" accept="image/*">
+                                <input type="file" class="fileInput" id="upladImg" name="department_image" accept="image/*">
+                                <input type="text" value="{{ department.uid }}" name="department_uid" style="display: none;">
                             </section>
                             <section class="col-lg-4 p-2">
-                                <button type="submit">Save</button>
+                                <button class="btn btn-primary" type="submit">Save</button>
                             </section>
                         </div>
+                        {% endif %}
                     </div>
                     <div class="col-lg-12 my-3">
                         <p>
-                            Computer Science &amp; Technology (CST) <br>
-                            Technology Code: 85
+                            {{ department.name }} ({{ department.short_name }}) <br>
+                            Technology Code: {{ department.code }}
                         </p>
                     </div>
                 </form>
             </div>
         </div>
 
-        <div class="col-lg-4 p-3">
-            <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
-                <form action="#" method="POST">
-                    <div class="col-lg-12 d-flex flex-column justify-content-center department_img">
-                        <img class="preview mx-auto rounded" src="../static/img/clg-img.jpg" alt="">
-                        <div class="row mx-auto">
-                            <section class="col-lg-8 p-2">
-                                <input type="file" class="fileInput" accept="image/*">
-                            </section>
-                            <section class="col-lg-4 p-2">
-                                <button type="submit">Save</button>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 my-3">
-                        <p>
-                            Computer Science &amp; Technology (CST) <br>
-                            Technology Code: 85
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="col-lg-4 p-3">
-            <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
-                <form action="#" method="POST">
-                    <div class="col-lg-12 d-flex flex-column justify-content-center department_img">
-                        <img class="preview mx-auto rounded" src="../static/img/clg-img.jpg" alt="">
-                        <div class="row mx-auto">
-                            <section class="col-lg-8 p-2">
-                                <input type="file" class="fileInput" accept="image/*">
-                            </section>
-                            <section class="col-lg-4 p-2">
-                                <button type="submit">Save</button>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 my-3">
-                        <p>
-                            Computer Science &amp; Technology (CST) <br>
-                            Technology Code: 85
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="col-lg-4 p-3">
-            <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
-                <form action="#" method="POST">
-                    <div class="col-lg-12 d-flex flex-column justify-content-center department_img">
-                        <img class="preview mx-auto rounded" src="../static/img/clg-img.jpg" alt="">
-                        <div class="row mx-auto">
-                            <section class="col-lg-8 p-2">
-                                <input type="file" class="fileInput" accept="image/*">
-                            </section>
-                            <section class="col-lg-4 p-2">
-                                <button type="submit">Save</button>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 my-3">
-                        <p>
-                            Computer Science &amp; Technology (CST) <br>
-                            Technology Code: 85
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="col-lg-4 p-3">
-            <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
-                <form action="#" method="POST">
-                    <div class="col-lg-12 d-flex flex-column justify-content-center department_img">
-                        <img class="preview mx-auto rounded" src="../static/img/clg-img.jpg" alt="">
-                        <div class="row mx-auto">
-                            <section class="col-lg-8 p-2">
-                                <input type="file" class="fileInput" accept="image/*">
-                            </section>
-                            <section class="col-lg-4 p-2">
-                                <button type="submit">Save</button>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 my-3">
-                        <p>
-                            Computer Science &amp; Technology (CST) <br>
-                            Technology Code: 85
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
-
+        {% endfor %}
         
-        
-      
+
     </section>
     
     <!-- End of departments -->
