--- a/atten/static/css/index.css
+++ b/atten/static/css/index.css
@@ -343,11 +343,11 @@ button:hover {
 #add-section {
     position: absolute;
     top:100px;
-    z-index: 1000;
+    z-index: 10;
     height: auto;
     left: 20%;
     right: 20%;
-    transform: translateY(-1000px);
+    transform: translateY(-1500px);
     transition: .5s;
     background-color: #fff;
 }
@@ -389,8 +389,11 @@ button:hover {
 
 .department_img::after {
     content: '';
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 6px;
+    background: linear-gradient(to bottom, #0328f7, #000000);
+    opacity: .5;
+    /* backdrop-filter: blur(30px); */
+    filter: blur(20px);
+    border-radius: 10px;
     z-index: 2;
     position: absolute;
     top: 0;
@@ -411,6 +414,31 @@ button:hover {
 
 /* Left menu */
 
+
+/* Teacher details */
+.uploadProfileDiv {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10px;
+    right: 0;
+    padding: 20px;
+    overflow: hidden;
+    background-color: #0005;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    backdrop-filter: blur(3px);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: .3s;
+}
+
+.profileImageDiv:hover .uploadProfileDiv {
+    transform: scaleX(1);
+    transform-origin: left;
+}
 
 
 @media (max-width:899px) { 
