--- a/atten/templates/departments/departments.html
+++ b/atten/templates/departments/departments.html
@@ -70,7 +70,7 @@
     <section style="min-height: 100vh;" class="departments container mx-auto d-flex flex-wrap justify-content-start my-3">
         {% for department in departments %}
         <div class="col-lg-4 p-3">
-            <div class="col-lg-12 mx-auto p-2 rounded bg-light border">
+            <div class="col-lg-12 mx-auto p-2 rounded bg-light border align-self-stretch">
                 <form action="{% url 'update_department_image' %}" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     
@@ -95,8 +95,7 @@
                     </div>
                     <div class="col-lg-12 my-3">
                         <p>
-                            {{ department.name }} ({{ department.short_name }}) <br>
-                            Technology Code: {{ department.code }}
+                            <b style="font-size: 22px;">{{ department.code }} - {{ department.name }} ({{ department.short_name }}) </b><br>
                         </p>
                     </div>
                 </form>
