--- a/atten/templates/teachers/login.html
+++ b/atten/templates/teachers/login.html
@@ -1,6 +1,7 @@
 {% extends "base/base.html" %}
-{%load static%}
+{% load static %}
 {% block start %}
+
 
     <!-- start of login -->
     <section style="min-height: 100vh;" id="login-bg" >
@@ -10,23 +11,21 @@
             <form>
                 <div class="mb-3">
                   <label for="username" class="form-label">Username</label>
-                  <input type="email" class="form-control" id="username" aria-describedby="emailHelp" placeholder="e.g.example@example.com">
+                  <input type="email" class="form-control" id="username" aria-describedby="emailHelp">
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                 </div>
                 <div class="mb-3">
                   <label for="passwork" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="passwork" placeholder="********">
+                  <input type="password" class="form-control" id="passwork">
                 </div>
 
                 <div class="col-lg-12 text-end mt-3">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Login</button>
                 </div>
               </form>
         </div>
         
     </section>
     <!-- end of login -->
-
-
-
 
 {% endblock %}
