--- a/atten/templates/subjects/subjects.html
+++ b/atten/templates/subjects/subjects.html
@@ -3,56 +3,74 @@
 
 {% block start %}
 
+<style>
+
+
+</style>
+
 
 
     <!-- start of student info -->
-    <section style="padding-top: 80px; min-height: 100vh;" class="container-fluid row mx-auto">
+    <section style="padding-top: 80px; min-height: 100vh;" class="container-fluid row mx-auto d-flex position-relative">
 
         <div class="col-lg-3 position-relative mx-auto left-menu-section">
             <i  id="left-bar" class="fa-solid fa-bars d-none"></i>
             <div id="left-inner-menu" class="position-sticky  border rounded shadow-sm bg-light p-2 inner-menu " style="left: 0; right: 0; top: 80px;">
                 <i id="left-xmark" class="fa-solid fa-xmark d-none"></i>
+
+                {% if request.user.is_authenticated %}
                 <div class="col-lg-12 my-3">
                     <a href="#">
                         <button id="add-btn">Add Subjects</button>
                     </a>
                 </div>
+                {% endif %}
 
-                <form>
+                <form method="post">
+                  {% csrf_token %}
                     <!-- <fieldset disabled> -->
                       <legend>Filter to show Subjects</legend>
-                      <div class="mb-3">
+                      <div class="mb-3 col-lg-12 mx-auto">
                         <label for="department" class="form-label">Select Department</label>
-                        <select id="department" class="form-select">
+                        <select id="department" name="department" class="form-select" required>
                           <option></option>
-                          <option>ET</option>
-                          <option>TT</option>
-                          <option>CT</option>
-                          <option>MT</option>
-                          <option>CST</option>
+                          {% for department in departments %}
+                          <option value="{{ department.name }}" {% if selected_department == department.name %} selected class="selected" {% endif %}>
+                              {{ department.name }}
+                          </option>
+                          {% endfor %}
                         </select>
                       </div>
-                      <div class="mb-3">
-                        <label for="senester" class="form-label">Select Semester</label>
-                        <select id="senester" class="form-select">
-                          <option></option>
-                          <option>1st</option>
-                          <option>2nd</option>
-                          <option>3rd</option>
-                          <option>5th</option>
-                          <option>6th</option>
-                          <option>7th</option>
-                          <option>8th</option>
-                        </select>
-                      </div>
-                      <div class="mb-3">
-                        <div class="form-check">
-                          <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                          <label class="form-check-label" for="disabledFieldsetCheck">
-                            Can't check this
-                          </label>
+
+                      <div class="col-lg-12 row mx-auto">
+
+                        <div class="mb-3 col-lg-6">
+                          <label for="probidhan" class="form-label">Probidhan</label>
+                          <select id="probidhan" name="probidhan" class="form-select" required>
+                            <option></option>
+                            {% for probidhan in probidhans %}
+                            <option value="{{ probidhan.name }}" {% if selected_probidhan == probidhan.name %} selected class="selected" {% endif %}>
+                              {{ probidhan.name }}
+                            </option>
+                            {% endfor %}
+                          </select>
                         </div>
+
+                        <div class="mb-3 col-lg-6">
+                          <label for="senester" class="form-label">Select Semester</label>
+                          <select id="senester" name="semester" class="form-select" required>
+                            <option></option>
+                            {% for semester in semesters %}
+                            <option value="{{ semester.name }}" {% if selected_semester == semester.name %} selected class="selected" {% endif %}>
+                              {{ semester.name }}
+                            </option>
+                            {% endfor %}
+                          </select>
+                        </div>
+
                       </div>
+                      
+
                         <div class="col-lg-12 text-end">
                             <button type="submit" class="">Submit</button>
                         </div>
@@ -62,80 +80,57 @@
             </div>
         </div>
 
+        {% if subjects %}
+
         <div class="col-lg-9 bg-light border rounded shadow-sm pt-3">
-            <h1 class="text-center">Computer Sceince and Technology</h1>
+            <h1 class="text-center"> {{ selected_department }} - {{ selected_semester }} ({{ selected_probidhan }}) </h1>
             <hr>
             <!-- Search bar -->
            
 
             <!-- Students Table -->
 
-            <table class="table">
+            <div class="table__body">
+
+              <table class="table table-striped table-hover">
 
                 <thead>
                     <tr>
-                    <th scope="col">SN.</th>
-                    <th scope="col">Sub. Code</th>
-                    <th scope="col">Sub. Name</th>
-                    <th scope="col">Theory Class</th>
-                    <th scope="col">Practical Class</th>
-                    <th scope="col">Subject Credit</th>
+                      <th scope="col">SN.</th>
+                      <th scope="col">Sub. Code</th>
+                      <th scope="col">Sub. Name</th>
+                      <th scope="col">Theory Class</th>
+                      <th scope="col">Practical Class</th>
+                      <th scope="col">Subject Credit</th>
                     </tr>
                 </thead>
 
-                <!-- <tbody>
+                <tbody>
+                  {% for subject in subjects %}
 
                     <tr>
-                    <th scope="row">1</th>
+                      <td scope="col"> {{ forloop.counter }} </td>
 
-                    <td>
-                        <div class="form-check">
-                            <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="1" id="present" name="present">
-                            </div>
-                    </td>
+                      <td> {{ subject.code }} </td>
 
-                    <td>609554</td>
-                    <td>Tanvir Islam</td>
-                    <td></td>
+                      <td> {{ subject.name }} </td>
+                      <td> {{ subject.theory }} </td>
+                      <td> {{ subject.practical }} </td>
+                      <td> {{ subject.credits }} </td>
                     </tr>
+                  {% endfor %}
 
-                    <tr>
-                    <th scope="row">2</th>
+                </tbody>
 
-                    <td>
-                        <div class="form-check">
-                            <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="2" id="present" name="present">
-                            </div>
-                    </td>
+              </table>
+            </div>
 
-                    <td>189296</td>
-                    <td>Muslima Jahan Mohona</td>
-                    <td></td>
-                    </tr>
-
-                    <tr>
-                    <th scope="row">3</th>
-
-                    <td>
-                        <div class="form-check">
-                            <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="present" id="present" name="present">
-                            </div>
-                    </td>
-
-                    <td>690505</td>
-                    <td>Asma Aktar</td>
-                    <td></td>
-                    </tr>
-
-                </tbody> -->
-
-            </table>
+            
 
 
         </div>
+
+        {% endif %}
     </section>
     <!-- End of student info -->
 
