--- a/atten/templates/teachers/teahcer_detail.html
+++ b/atten/templates/teachers/teahcer_detail.html
@@ -41,7 +41,7 @@
                     </div>
                     <hr>
                     <p style="text-transform: capitalize; font-weight: 900;">
-                        {{ teacher.designation }} - {{ teacher.department.short_name }} <br>
+                        {{ teacher.designation }} - {{ teacher.department.name }} <br>
                         Image Polytechnic Institute, Rangpur
                     </p>
                     <hr>
@@ -52,7 +52,7 @@
             <div class="col-lg-12 mt-3 p-2 bg-light shadow-sm border rounded-top">
                 <h1 class="text-center my-2">Routine</h1>
 
-                <div style="max-height: 70vh;" class="col-lg-12 mx-auto d-flex justify-content-center">
+                <div style="max-height: 100vh;"  class="col-lg-10 mx-auto d-flex justify-content-center">
                     {% if teacher.routine_img %}
                     <img src="/media/{{teacher.routine_img}}" style="max-height: 100%; width: auto;" alt="">
                     {% else %}
